# oop-course-cpp

./: README.md
complexNumbers/: CMakeLists.txt  README.md  complexNumbers.cpp  complexNumbers.h  main.cpp
geometryFiguresHierarchy/: CMakeLists.txt  README.md  circle.cpp  circle.h  ellipse.cpp  ellipse.h  main.cpp  point.cpp  point.h  polygon.cpp  polygon.h  quadrangle.cpp  quadrangle.h  segment.cpp  segment.h  shape.cpp  shape.h  triangle.cpp  triangle.h
matrix/: CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.h
matrixWithTemplate/: CMakeLists.txt  README.md  complexNumbers.cpp  complexNumbers.h  main.cpp  matrix.h
